@@ -1,3 +1,10 @@
+libpam-csc (1.3) stable testing; urgency=low
+
+  * Added allowed usernames check
+  * Ignore entries without the objectClass=member attribute
+
+ -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Thu, 09 Aug 2007 04:03:37 -0400
+
 libpam-csc (1.2) stable testing; urgency=low
 
   * Optimized querying by using single query and using asynch functions
